# codex

codex-rs/: Cargo.toml  spec.md
codex-rs/codex-driver/: Cargo.toml  README.md  summary.md
codex-rs/codex-driver/examples/: basic.rs
codex-rs/codex-driver/src/: lib.rs
